Feature/active source db connections recovered (#1)
* chore: snapshot current preview-db implementation

* feat: clone preview DB from active source using dump/restore

* feat: validate preview existence on synchronize without reclone

* stable version

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ PR_NUMBER=12
 # SOURCE_DB=geopark
 # PREVIEW_DB=geopark_pr_12
 # APP_DB_USER=qa_user
+
+# Integration test options (create test)
+# SOURCE_CONN_COUNT=2
+# SOURCE_CONN_SLEEP_SECONDS=180
