--- a/examples/preview-db-caller.yml
+++ b/examples/preview-db-caller.yml
@@ -1,4 +1,4 @@
-name: Preview DB Caller Example
+name: Preview Branch DB Caller (Reusable Workflow)
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ permissions:
   contents: read
 
 jobs:
-  preview-db:
+  preview-branch-db:
     uses: Eiley2/db-preview-branching/.github/workflows/preview-db-reusable.yml@main
     with:
       event_action: ${{ github.event.action }}
