--- a/.github/workflows/release-major-tag.yml
+++ b/.github/workflows/release-major-tag.yml
@@ -3,6 +3,15 @@ name: Update Release Aliases
 on:
   release:
     types: [published]
+  push:
+    tags:
+      - 'v*.*.*'
+  workflow_dispatch:
+    inputs:
+      release_tag:
+        description: "Stable semver tag to process (example: v1.2.3)"
+        required: true
+        type: string
 
 permissions:
   contents: write
@@ -18,11 +27,11 @@ jobs:
 
       - name: Move major and latest aliases for stable releases
         env:
-          RELEASE_TAG: ${{ github.event.release.tag_name }}
+          RELEASE_TAG: ${{ inputs.release_tag || github.event.release.tag_name || github.ref_name }}
         run: |
           set -euo pipefail
 
-          if ! [[ "${RELEASE_TAG}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          if ! [[ "${RELEASE_TAG:-}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo "Tag ${RELEASE_TAG} is not a stable semver release. Skipping aliases."
             exit 0
           fi
