--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,10 @@ inputs:
     description: "Optional DB role to grant privileges on preview DB"
     required: false
     default: ""
+  clone_strategy:
+    description: "Clone client strategy for create/reset: auto, local, or docker (ignored by delete)"
+    required: false
+    default: "auto"
   pg_host:
     description: "PostgreSQL host"
     required: true
@@ -48,6 +52,7 @@ runs:
         BRANCH_NAME: ${{ inputs.branch_name }}
         PARENT_BRANCH: ${{ inputs.parent_branch }}
         APP_DB_USER: ${{ inputs.app_db_user }}
+        CLONE_STRATEGY: ${{ inputs.clone_strategy }}
         PGHOST: ${{ inputs.pg_host }}
         PGPORT: ${{ inputs.pg_port }}
         PGUSER: ${{ inputs.pg_user }}
